2005-12-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: exit if xine-lib isn't available, and GStreamer
	is disabled (Closes: #324785)

2005-12-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem-properties-main.c: (nautilus_module_initialize):
	* src/totem-properties-view.c: (totem_properties_view_init),
	(totem_properties_view_finalize),
	(totem_properties_view_set_location): don't assert if we can't init
	the backend, and fix resulting warnings

2005-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_setup_file_filters),
	(totem_destroy_file_filters), (totem_add_files):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_exit): Fix crash when calling the "add
	to playlist dialogue twice" (Closes: #324240)

2005-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-private.h:
	* src/totem-sidebar.c: (cb_resize), (cb_got_size),
	(on_sidebar_button_toggled): patch from Ronald Bultje
	<rbultje@ronald.bitfreak.net> to fix resizing of the sidebar
	(Closes: #324346)

2005-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (push_parser):
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_set_method),
	(totem_pl_parser_add_m3u), (parse_asx_entry), (parse_asx_entries),
	(parse_smil_entry), (parse_smil_entries),
	(totem_pl_parser_add_smil), (totem_pl_parser_add_asf),
	(totem_pl_parser_parse_internal):
	Fix for remote ASX files with broken mime-type, lower-case asx header,
	return values from the sub-parsers, s/mms/mmsh/ (Closes: #323683)

2005-12-18  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* src/Makefile.am:
	* src/plparse/Makefile.am: Fixes for builddir != srcdir.

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: add image for the Play/Pause popup menu item

2005-12-17  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: Remove keyboard shortcuts from the popup menu
	(Closes: #323855)

2005-12-17  Bastien Nocera  <hadess@hadess.net>
