@@ -1,3 +1,8 @@
+2006-01-02  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-pl-parser.c:
+	(my_gnome_vfs_get_mime_type_with_data): fix parsing of directories
+
 2005-12-22  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in: exit if xine-lib isn't available, and GStreamer
